# python-template-example

./: .copier-answers.yml  .editorconfig  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  taskfile.yml
.config/: ruff.toml  yamllint.yml
.devcontainer/: Dockerfile  devcontainer.json
.taskfiles/: copier.yml  lint.yml  mkdocs.yml  test.yml
src/python_template_example/: __main__.py
tests/: test_example.py
