[project]
name = "python-template-example"
version = "0.0.0"
description = "Test python-template project"
license = { text = "MIT" }
authors = [
    { name = "Michael Scott", email = "michael.scott@dunder.mifflin.com" },
]
maintainers = [
    { name = "Michael Scott", email = "michael.scott@dunder.mifflin.com" },
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
]

[project.urls]
homepage = "https://github.com/pa-decarvalho/python-template-example"
repository = "https://github.com/pa-decarvalho/python-template-example"
documentation = "https://pa-decarvalho.github.io/python-template-example"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
    { include = "python_template_example", from = "src" },
]

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
copier = "^9.5.0"

[tool.poetry.group.lint]
optional = true
[tool.poetry.group.lint.dependencies]
ruff = "^0.9.6"
yamllint = "^1.35.1"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
